2016-12-07 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/session/session-class.tcl:
    * rivet/packages/session/form*.tcl: fully qualifying
    ::rivet::* command names in this packages
    * src/librivet/rivetWWW.c: new buffer size allocation
    to prevent apache from crashing when too many
    characters needed escaping are in a string

2016-11-28 Massimo Manghi <mxmanghi@apache.org>
    * .: releasing rivet 2.3.3

2016-11-17 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio_Postgresql.tcl: applied
    consistent single quote character handling by
    calling PgTcl function pg_quote (closes bug #60378)
    * rivet/packages/formbroker/formbroker.tcl: fixed
    bug in method response. Package version number
    bumped up to 1.0
    * doc/xml/formbroker.xml: first draft of the
    manual page of package formbroker with 
    example of implementation of a validator
    * contrib/validate_mac.tcl: add example of
    a validator
    * doc/xml/commands.xml: fixed typo in ::rivet::xml
    manual page

2016-11-15 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/catch.tcl|try.tcl: better
    script evaluation is catch/try construct, 
    specified complete ::rivet::abort_page generated 
    error codes
    * rivet/packages/formbroker/formbroker.tcl: add
    package formbroker
    * doc/xml/formbroker.xml,asciiglyphs.xml: add 
    documentation for packages formbroker and asciiglyphs

2016-11-09 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/mod_rivet_common.c: the request_rec
    field to be checked in order to determine whether we
    are serving the request is 'header' non 'content_type'.
    This bug didn't surface because their set to the same
    string when a request is handed to the module chain, but
    it's been around ever since.
    * VERSION,configure.ac: version set to 2.3.3

2016-09-21 Massimo Manghi <mxmanghi@apache.org>
    * Changelog: logging release of this artifact as rivet 2.3.2
