@@ -220,7 +220,7 @@ package provide form 2.1
     method default_args {type args} {
 
         # if only one argument was specified
-        if {[lempty $args]} {
+        if {[::rivet::lempty $args]} {
             if {![info exists DefaultArgs($type)]} { return }
             return $DefaultArgs($type)
         }
@@ -238,7 +238,7 @@ package provide form 2.1
     # start - generate the <form> with all of its arguments
     #
     method start {{args ""}} {
-        if {![lempty $args]} {
+        if {![::rivet::lempty $args]} {
             # replicated in constructor
             import_data form $this arguments $args
         }
@@ -485,7 +485,7 @@ package provide form 2.1
 
         set list [import_data radiobuttons $name data $args]
 
-        if {[lempty $data(labels)]} { 
+        if {[::rivet::lempty $data(labels)]} { 
             set data(labels) $data(values) 
         }
 
@@ -503,7 +503,7 @@ package provide form 2.1
 
         set list [import_data checkboxes $name data $args]
 
-        if {[lempty $data(labels)]} { 
+        if {[::rivet::lempty $data(labels)]} { 
             set data(labels) $data(values) 
         }
 
@@ -557,7 +557,7 @@ package provide form 2.1
         # if there are no separate labels defined, use the list of
         # values for the labels
         #
-        if {[lempty $labels]} { 
+        if {[::rivet::lempty $labels]} { 
             set labels $values 
         }
 
